# rust-cedict

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: dump_file.rs  parse_file.rs
src/: lib.rs
